[gd_scene load_steps=3 format=2]

[ext_resource path="res://Common/Detector/RangeDetector.gd" type="Script" id=1]

[sub_resource type="CylinderShape" id=1]
height = 1.0

[node name="RangeDetector" type="Spatial"]
script = ExtResource( 1 )

[node name="Area" type="Area" parent="."]
input_ray_pickable = false

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 1 )

[connection signal="area_entered" from="Area" to="." method="_on_Area_area_entered"]
[connection signal="area_exited" from="Area" to="." method="_on_Area_area_exited"]
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
